--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
+          npm i -g pnpm
           pnpm install
           pnpm build
       - name: Deploy 🚀
